refactor: replace hardcoded CORS origins with dynamic configuration property